# DirectX-Headers

googletest/: .gitmodules  CMakeLists.txt  MockDevice.hpp  feature_support_test.cpp
include/directx/: d3dx12.h
test/: feature_check_test.cpp
